--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bluebird": "^3.7.2",
     "chalk": "^2.4.2",
+    "cookie-session": "^2.0.0",
     "dotenv": "^2.0.0",
-    "ejs": "^2.6.2",
+    "ejs": "^2.7.4",
     "express": "^4.17.1",
+    "helmet": "^7.0.0",
     "morgan": "^1.9.1",
+    "openai": "^3.3.0",
+    "path": "^0.12.7",
     "pg": "^8.5.0",
+    "pg-promise": "^11.5.0",
     "sass": "^1.35.1"
   },
   "devDependencies": {
